--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,4 @@
 title: Recipe Book
-remote_theme: "mmistakes/minimal-mistakes@4.24.0"
+remote_theme: pages-themes/merlot@v0.2.0
 plugins:
 - jekyll-remote-theme
-
-permalink: pretty
-search_enabled: false
-include_head: false
-heading_anchors: true
